--- a/exception/handler/exception.html
+++ b/exception/handler/exception.html
@@ -26,15 +26,15 @@
 </div>
 </body>
 <script>
-    var i=3;
-    setInterval(function () {
-        i--;
-       var el= document.getElementById('time');
-        el.textContent=i;
-        if(i==0){
-            history.go(-1);
-        }
-    },1000);
+//    var i=3;
+//    setInterval(function () {
+//        i--;
+//       var el= document.getElementById('time');
+//        el.textContent=i;
+//        if(i==0){
+//            history.go(-1);
+//        }
+//    },1000);
 
 </script>
 </html>
