--- a/exception/handler/exception.html
+++ b/exception/handler/exception.html
@@ -19,22 +19,22 @@
     <table>
         <tr>
             <td rowspan="5" style=""><img src="http://qzonestyle.gtimg.cn/open/qcloud/beian/dest/warn.png"></td>
-            <td class="header">{$msg}</td>
+            <td class="header">{{msg}}</td>
             <td ><a href="javascript:history.go(-1)"><span id="time">3</span>s后 立即返回 </a></td>
         </tr>
     </table>
 </div>
 </body>
 <script>
-//    var i=3;
-//    setInterval(function () {
-//        i--;
-//       var el= document.getElementById('time');
-//        el.textContent=i;
-//        if(i==0){
-//            history.go(-1);
-//        }
-//    },1000);
+    var i=3;
+    setInterval(function () {
+        i--;
+       var el= document.getElementById('time');
+        el.textContent=i;
+        if(i==0){
+            history.go(-1);
+        }
+    },1000);
 
 </script>
 </html>
