--- a/exception/handler/report.html
+++ b/exception/handler/report.html
@@ -23,9 +23,9 @@
 <div class="wrap">
         <div class="msg-line">
             <div>
-                {$info}
+                {{info}}
             </div>
-            <div> {$msg}
+            <div> {{msg}}
         </div>
 
         </div>
