--- a/exception/handler/exception.html
+++ b/exception/handler/exception.html
@@ -27,14 +27,14 @@
 </body>
 <script>
     var i=3;
-    setInterval(function () {
-        i--;
-       var el= document.getElementById('time');
-        el.textContent=i;
-        if(i==0){
-            history.go(-1);
-        }
-    },1000);
+//    setInterval(function () {
+//        i--;
+//       var el= document.getElementById('time');
+//        el.textContent=i;
+//        if(i==0){
+//            history.go(-1);
+//        }
+//    },1000);
 
 </script>
 </html>
