--- a/src/exception/handler/exception.html
+++ b/src/exception/handler/exception.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>提示</title>
     <META NAME="ROBOTS" CONTENT="NOINDEX,NOFOLLOW"/>
     <style>
         body{font-size: 14px;font-family: 'helvetica neue',tahoma,arial,'hiragino sans gb','microsoft yahei','Simsun',sans-serif; background-color:#fff; color:#808080;}
@@ -16,8 +17,14 @@
 <body>
 <div class="wrap">
     <table>
+        <caption>提示</caption>
+        <th>
+            <td></td>
+            <td></td>
+            <td></td>
+        </th>
         <tr>
-            <td rowspan="5" style=""><img src="http://qzonestyle.gtimg.cn/open/qcloud/beian/dest/warn.png"></td>
+            <td rowspan="5" style=""><img alt="图片" src="http://qzonestyle.gtimg.cn/open/qcloud/beian/dest/warn.png"></td>
             <td class="header">{{msg}}</td>
             <td ><a href="javascript:history.go(-1)">返回 </a></td>
         </tr>
