--- a/src/exception/handler/report.html
+++ b/src/exception/handler/report.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>提示</title>
     <META NAME="ROBOTS" CONTENT="NOINDEX,NOFOLLOW"/>
     <style>
         body{font-size: 14px;font-family: 'helvetica neue',tahoma,arial,'hiragino sans gb','microsoft yahei','Simsun',sans-serif; background-color:#fff; color:#808080;}
